Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

10/10/2010
  The locally built patched version of the Xerces-J jar introduced
  as part of LUCENE-1591 is no longer required, because Xerces
  2.10.0, which contains a fix for XERCESJ-1257 (see
  http://svn.apache.org/viewvc?view=revision&revision=554069),
  was released earlier this year.  Upgraded
  xerces-2.9.1-patched-XERCESJ-1257.jar and xml-apis-2.9.0.jar
  to xercesImpl-2.10.0.jar and xml-apis-2.10.0.jar. (Steven Rowe)

8/2/2010
  LUCENE-2582: You can now specify the default codec to use for
  writing new segments by adding default.codec = Pulsing (for
  example), in the alg file.  (Mike McCandless)

4/27/2010: WriteLineDocTask now supports multi-threading. Also, 
  StringBufferReader was renamed to StringBuilderReader and works on 
  StringBuilder now. In addition, LongToEnglishCountentSource starts from 0
  (instead of Long.MIN_VAL+10) and wraps around to MIN_VAL (if you ever hit 
  Long.MAX_VAL). (Shai Erera)

4/07/2010
  LUCENE-2377: Enable the use of NoMergePolicy and NoMergeScheduler by 
  CreateIndexTask. (Shai Erera)
  
3/28/2010
  LUCENE-2353: Fixed bug in Config where Windows absolute path property values 
  were incorrectly handled (Shai Erera)
  
3/24/2010
  LUCENE-2343: Added support for benchmarking collectors. (Grant Ingersoll, Shai Erera)

2/21/2010
  LUCENE-2254: Add support to the quality package for running
  experiments with any combination of Title, Description, and Narrative.
  (Robert Muir)

1/28/2010
  LUCENE-2223: Add a benchmark for ShingleFilter. You can wrap any
  analyzer with ShingleAnalyzerWrapper and specify shingle parameters
  with the NewShingleAnalyzer task.  (Steven Rowe via Robert Muir)

1/14/2010
  LUCENE-2210: TrecTopicsReader now properly reads descriptions and
  narratives from trec topics files.  (Robert Muir)

1/11/2010
  LUCENE-2181: Add a benchmark for collation. This adds NewLocaleTask,